Humans link fix

--- a/views/layout.html
+++ b/views/layout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">{%block meta%} {%endblock%}
     <!-- /meta -->
-    <link rel="author" href="humans.txt">
+    <link rel="author" href="/humans.txt">
     <!-- Styles -->
     {%if prod%}
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
