Post add and view created

--- a/public/styles/ananda.css
+++ b/public/styles/ananda.css
@@ -189,3 +189,13 @@ table th.no-classes{
     font-style: italic;
     background-color:#FFFFFF;
 }
+
+
+/*
+============================================================================
+                        Admin
+============================================================================
+*/
+.note-editable{
+    background-color:white;
+}
