--- a/views/layout.html
+++ b/views/layout.html
@@ -30,7 +30,7 @@
     </ul> -->
     <header class="container-fluid">
         <div class="row">
-            <div class="col-xs-12" id="title">
+            <div class="col-xs-12" id="site-name">
                 <h1><a href="/">Ananda Yoga</a></h1>
             </div>
         </div>
