--- a/views/admin/post.html
+++ b/views/admin/post.html
@@ -112,24 +112,4 @@
         });
     });
 </script>
-
-
-<script>
-    function deletesub(){
-            if(confirm("Are you sure you want to delete this substitution??")){
-                bootstrapAlert("alert-info", "Deleting post...");
-                $.post("/admin/substitution/delete", {id:"{{post._id}}"}, function(data){
-                    if(data.success){
-                        bootstrapAlert("alert-success", "Substitution successfully deleted. Redirecting you back to admin homepage in 2 seconds.")
-                        setTimeout(function(){document.location = "/admin"}, 2000);
-                    }
-                    else{
-                        console.log(data);
-                        bootstrapAlert("alert-warning", "Could not delete.");
-                    }
-                }).fail(function(){
-                    bootstrapAlert("alert-warning", "Could not delete.");
-                });
-            }
-        }
-</script>{% endblock %}
+{% endblock %}
