--- a/views/admin/admin.html
+++ b/views/admin/admin.html
@@ -2,7 +2,22 @@
 <!----->
 {%block main%}
 <div class="row">
-    <div class="col-sm-8 col-sm-offset-3">
+    <div class="col-sm-4">
+        <div class="admin-box">
+            <a href="/admin/addUser" class="btn btn-primary pull-right">New User</a>
+            <h2>Users</h2>
+            <ul class="list-group">
+                {% for user in users %}
+                <li class="list-group-item">
+                        <a href="#" onclick="deleteUser('{{user.email}}')" class="pull-right"><i class="fa fa-trash-o"></i></a>
+                        <h3 class="list-group-item-heading">{{user.email}}</h3>
+                </li>
+                {% endfor %}
+                <!----->
+            </ul>
+        </div>
+    </div>
+    <div class="col-sm-7 col-sm-offset-1">
         <div class="admin-box">
             <a href="/admin/post" class="btn btn-primary pull-right">New Post</a>
             <h2>News Posts</h2>
