Login required for admin

--- a/views/admin/admin.html
+++ b/views/admin/admin.html
@@ -9,7 +9,7 @@
             <ul class="list-group">
                 {% for user in users %}
                 <li class="list-group-item">
-                        <a href="#" onclick="deleteUser('{{user.email}}')" class="pull-right"><i class="fa fa-trash-o"></i></a>
+                        <a href="#" onclick="deleteUser('{{user.email}}')" class="pull-right"><i class="fa fa-trash-o fa-2x"></i></a>
                         <h3 class="list-group-item-heading">{{user.email}}</h3>
                 </li>
                 {% endfor %}
