--- a/views/layout.html
+++ b/views/layout.html
@@ -8,11 +8,8 @@
     <!-- /meta -->
     <link rel="author" href="/humans.txt">
     <!-- Styles -->
-    {%if prod%}
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">{%else%}
-    <link rel="stylesheet" href="/styles/bootstrap.css">
-    <link rel="stylesheet" href="/styles/font-awesome/css/font-awesome.min.css">{%endif%}
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <link rel="stylesheet" href="/styles/ananda.css">{%block styles%} {%endblock%}
     <!-- /styles -->
 
@@ -22,12 +19,13 @@
 </head>
 
 <body {%block bodyattr%}{%endblock%}>
-    <!-- <ul id="MQHelper">
+    
+    {%if prod%} <ul id="MQHelper">
         <li class="visible-xs">XS</li>
         <li class="visible-sm">SM</li>
         <li class="visible-md">MD</li>
         <li class="visible-lg">LG</li>
-    </ul> -->
+    </ul> {%endif%}
     <header class="container-fluid">
         <div class="row">
             <div class="col-xs-12" id="site-name">
