Whoops, production code fix

--- a/views/layout.html
+++ b/views/layout.html
@@ -20,7 +20,7 @@
 
 <body {%block bodyattr%}{%endblock%}>
     
-    {%if prod%} <ul id="MQHelper">
+    {%if !prod%} <ul id="MQHelper">
         <li class="visible-xs">XS</li>
         <li class="visible-sm">SM</li>
         <li class="visible-md">MD</li>
