Welcome is now a card

--- a/views/landing.html
+++ b/views/landing.html
@@ -52,7 +52,7 @@
     </div>
 
     <div id="right" class="col-xs-12 col-sm-8">
-        <div id="welcome" class="clearfix well">
+        <div id="welcome" class="clearfix card">
 
             <img class="pull-left img-responsive" src="//lorempixel.com/200/200" alt="">
             <h2>Welcome to Lander's Ananda Yoga</h2>
