--- a/public/styles/ananda.css
+++ b/public/styles/ananda.css
@@ -81,6 +81,8 @@ main .affix-bottom {
     position: absolute;
 }
 .card {
+    border-radius:4px;
+    box-shadow:5px 6px 15px -2px rgba(0,0,0,.3);
     background-color: #F5F5F5;
     margin-bottom: 1em;
     border: 1px solid rgba(0, 0, 0, .3);
@@ -102,7 +104,10 @@ main .affix-bottom {
     margin: 0;
     border-bottom: 1px dotted rgba(0, 0, 0, .1);
 }
-#welcome {} #welcome > img {
+#welcome {
+    padding:19px;
+} 
+#welcome > img {
     margin: 1em 1em 1em 0;
 }
 
