--- a/public/styles/ananda.css
+++ b/public/styles/ananda.css
@@ -1,155 +1,152 @@
 #MQHelper {
-    position: fixed;
-    right: 20px;
-    top: 10px;
+  position: fixed;
+  right: 20px;
+  top: 10px;
+  z-index: 1000;
 }
 #MQHelper li {
-    position: relative;
-    color: red;
-    background-color: black;
-    font-weight: bold;
-    font-size: 2em;
-    padding: 5px 10px;
+  position: relative;
+  color: red;
+  background-color: black;
+  font-weight: bold;
+  font-size: 2em;
+  padding: 5px 10px;
 }
 body {
-    background-image:linear-gradient(to bottom, #EBE0A0, #E7DEB2);
+  background-image: linear-gradient(to bottom, #ebe0a0, #e7deb2);
 }
 a {
-    color: #FFA813;
+  color: #FFA813;
 }
 a:hover {
-    color: #F36F22;
+  color: #F36F22;
 }
 h1,
 h2,
 h3,
 h4,
 h5 {
-    margin-top: 0;
-    font-family: Verdana, sans-serif
+  margin-top: 0;
+  font-family: Verdana, sans-serif;
 }
 h1,
 h2 {
-    color: #407743;
+  color: #407743;
 }
 h3 {
-    color: #D19115;
+  color: #D19115;
 }
 header {
-    background: url(/img/wheat.jpg) center/cover;
-    min-height: 10em;
+  background: url(/img/wheat.jpg) center / cover;
+  min-height: 10em;
 }
 header h1 {
-    color: white;
-    background-color: rgba(0, 0, 0, .5);
-    display: inline-block;
-    padding: 10px;
-    border-radius: .2em;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: inline-block;
+  padding: 10px;
+  border-radius: .2em;
 }
-nav.navbar.navbar-default{
-    background-color:#AE8448; 
-    border-color:#AD8347;
+nav.navbar.navbar-default {
+  background-color: #AE8448;
+  border-color: #AD8347;
 }
-
-nav.navbar.navbar-default a{
-    color:#1C8125;
-    /* color:#5769B3; */
+nav.navbar.navbar-default a {
+  color: #1C8125;
+  /* color:#5769B3; */
 }
 nav.navbar.navbar-default li a:hover,
-nav.navbar.navbar-default li.active a{
-    color:#FFFFFF;
-    background-color:#C9954A;
+nav.navbar.navbar-default li.active a {
+  color: #FFFFFF;
+  background-color: #C9954A;
 }
 .navbar {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 .nav-pills > li.active a,
-.nav-pills > li.active a:hover{
-    background-color:#35B855;
+.nav-pills > li.active a:hover {
+  background-color: #35B855;
 }
-#classes-nav .nav-pills{
-    border-radius:4px;
+#classes-nav .nav-pills {
+  border-radius: 4px;
 }
 main {
-    padding-top: 1em;
+  padding-top: 1em;
 }
 main .affix {
-    position: fixed;
-    top: 10px;
+  position: fixed;
+  top: 10px;
 }
 main .affix-bottom {
-    position: absolute;
+  position: absolute;
 }
 .card {
-    border-radius:4px;
-    box-shadow:5px 6px 15px -2px rgba(0,0,0,.3);
-    background-color: #F5F5F5;
-    margin-bottom: 1em;
-    border: 1px solid rgba(0, 0, 0, .3);
+  border-radius: 4px;
+  box-shadow: 5px 6px 15px -2px rgba(0, 0, 0, 0.3);
+  background-color: #F5F5F5;
+  margin-bottom: 1em;
+  border: 1px solid rgba(0, 0, 0, 0.3);
 }
 .card.no-border {
-    border-style: none;
+  border-style: none;
 }
 .class {
-    padding: 1em;
+  padding: 1em;
 }
 #left > div {
-    /* margin-top: 1em; */
-    /* margin-bottom: 1em; */
-    padding: 1em;
-    border-radius: 3px;
+  /* margin-top: 1em; */
+  /* margin-bottom: 1em; */
+  padding: 1em;
+  border-radius: 3px;
 }
-#left>div>h2 {
-    font-family: Verdana, sans-serif;
-    margin: 0;
-    border-bottom: 1px dotted rgba(0, 0, 0, .1);
+#left > div > h2 {
+  font-family: Verdana, sans-serif;
+  margin: 0;
+  border-bottom: 1px dotted rgba(0, 0, 0, 0.1);
 }
 #welcome {
-    padding:19px;
-} 
+  padding: 19px;
+}
 #welcome > img {
-    margin: 1em 1em 1em 0;
+  margin: 1em 1em 1em 0;
 }
-
-.article-wrapper article{
-    height:250px;
-    overflow:hidden;
+.article-wrapper article {
+  height: 250px;
+  overflow: hidden;
 }
-
-
 article {
-    background-color: #FEFEFE;
-    padding-left: 1em;
+  background-color: #FEFEFE;
+  padding-left: 1em;
 }
 article h1 {
-    text-align: center;
+  text-align: center;
 }
 article img {
-    float: right;
+  float: right;
 }
 article:after {
-    display: block;
-    content: "";
-    clear: both;
+  display: block;
+  content: "";
+  clear: both;
 }
 article time {
-    font-size: .8em;
-    color: #AAA;
+  font-size: .8em;
+  color: #AAA;
 }
 footer {
-    height:4em;
-    padding:10px;
-    color: white;
-    padding-right: 20px;
+  height: 4em;
+  padding: 10px;
+  color: white;
+  padding-right: 20px;
 }
 footer p {
-    margin-bottom: 0;
-    padding-bottom: 1em;
-    text-align: right;
+  margin-bottom: 0;
+  padding-bottom: 1em;
+  text-align: right;
 }
 footer > a {
-    margin-left: 20px;
-    color: hsla(0, 100%, 50%, 1);
+  margin-left: 20px;
+  color: #ff0000;
 }
 /* @media screen and (max-width:768px){
     #left, #right{
@@ -169,46 +166,39 @@ footer > a {
         padding:1em;
     }
 } */
-
-
-
 /*
 ============================================================================
                         Schedule
 ============================================================================
 */
-table th{
-    font-size:1.2em;
-    background-color:#FEFEFE;
+table th {
+  font-size: 1.2em;
+  background-color: #FEFEFE;
 }
-table tr{
-    background-color:#F5F5F5;
+table tr {
+  background-color: #F5F5F5;
 }
 table tr:first-child {
-    border-bottom-width: 2px;
-    border-bottom-style:solid;
+  border-bottom-width: 2px;
+  border-bottom-style: solid;
 }
-table th.day{
-    font-size:1.1em;
+table th.day {
+  font-size: 1.1em;
 }
-table td.class-time{
-    text-align:center;
+table td.class-time {
+  text-align: center;
 }
-table th.no-classes{
-    font-size:1.1em;
-    color:#D0D0D0;
-    font-style: italic;
-    background-color:#FFFFFF;
+table th.no-classes {
+  font-size: 1.1em;
+  color: #D0D0D0;
+  font-style: italic;
+  background-color: #FFFFFF;
 }
-
-
 /*
 ============================================================================
                         Admin
 ============================================================================
 */
-.note-editable{
-    background-color:white;
+.note-editable {
+  background-color: white;
 }
-
-
