Fontawesome moved to local less files

--- a/less/fontawesome/icons.less
+++ b/less/fontawesome/icons.less
@@ -1,7 +1,7 @@
 /* Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
    readers do not read off random characters that represent icons */
 
-.@{fa-css-prefix}-glass:before { content: @fa-var-glass; }
+/* .@{fa-css-prefix}-glass:before { content: @fa-var-glass; }
 .@{fa-css-prefix}-music:before { content: @fa-var-music; }
 .@{fa-css-prefix}-search:before { content: @fa-var-search; }
 .@{fa-css-prefix}-envelope-o:before { content: @fa-var-envelope-o; }
@@ -131,9 +131,9 @@
 .@{fa-css-prefix}-twitter-square:before { content: @fa-var-twitter-square; }
 .@{fa-css-prefix}-facebook-square:before { content: @fa-var-facebook-square; }
 .@{fa-css-prefix}-camera-retro:before { content: @fa-var-camera-retro; }
-.@{fa-css-prefix}-key:before { content: @fa-var-key; }
+.@{fa-css-prefix}-key:before { content: @fa-var-key; } */
 .@{fa-css-prefix}-gears:before,
-.@{fa-css-prefix}-cogs:before { content: @fa-var-cogs; }
+.@{fa-css-prefix}-cogs:before { content: @fa-var-cogs; }/* 
 .@{fa-css-prefix}-comments:before { content: @fa-var-comments; }
 .@{fa-css-prefix}-thumbs-o-up:before { content: @fa-var-thumbs-o-up; }
 .@{fa-css-prefix}-thumbs-o-down:before { content: @fa-var-thumbs-o-down; }
@@ -410,3 +410,4 @@
 .@{fa-css-prefix}-turkish-lira:before,
 .@{fa-css-prefix}-try:before { content: @fa-var-try; }
 .@{fa-css-prefix}-plus-square-o:before { content: @fa-var-plus-square-o; }
+ */
