--- a/less/fontawesome/font-awesome.less
+++ b/less/fontawesome/font-awesome.less
@@ -5,13 +5,13 @@
 
 @import "variables";
 @import "mixins";
-@import "path";
-@import "core";
-@import "larger";
-@import "fixed-width";
-@import "list";
-@import "bordered-pulled";
-@import "spinning";
-@import "rotated-flipped";
-@import "stacked";
+@import "path";//@font-face
+@import "core";//.fa{}
+/* @import "larger"; */
+/* @import "fixed-width"; */
+/* @import "list"; */
+/* @import "bordered-pulled"; */
+/* @import "spinning"; */
+/* @import "rotated-flipped"; */
+/* @import "stacked"; */
 @import "icons";
