--- a/views/layout.html
+++ b/views/layout.html
@@ -8,7 +8,7 @@
     <!-- /meta -->
     <link rel="author" href="/humans.txt">
     <!-- Styles -->
-    <link rel="stylesheet" href="/styles/ananda.css">{%block styles%} {%endblock%}
+    <link rel="stylesheet" href="/styles/ananda.min.css">{%block styles%} {%endblock%}
     <!-- /styles -->
 
 
